--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "webpack-split-by-path": "^2.0.0"
   },
   "dependencies": {
+    "cytoscape": "^2.7.16",
     "isomorphic-fetch": "^2.2.1",
     "node-sass": "^4.5.2",
     "react": "^15.4.2",
